--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       color: #fff;
-      background-color: green;
+      background-color: rgb(255, 0, 0);
       border-radius: 8px;
       padding: 10px 15px;
       font-size: 1rem;
