--- a/index.html
+++ b/index.html
@@ -771,7 +771,9 @@
         y: 50,
         ease: 'power2.out'
       });
-    });
+    });<script>
+      import { Analytics } from "@vercel/analytics/react"
+      </script>
   </script>
 </body>
 </html>
